Added welcome and schedule buttons, tested Light control on Hue Bridge Emulator

--- a/platformio.ini
+++ b/platformio.ini
@@ -14,4 +14,4 @@ board = esp32doit-devkit-v1
 monitor_speed = 115200
 framework = arduino
 board_build.filesystem = spiffs
-
+lib_deps = bblanchon/ArduinoJson@^7.1.0
